# Clockd

./: .dockerignore  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: ci.yml
configs/: server.yaml
configs/cameras/: example.yaml
deploy/: k8s-example.yaml
grafana/: clockd-dashboard.json
src/clockd/: __main__.py  config.py  main.py  middleware.py  models.py
src/clockd/routers/: calibrate.py  cameras.py  jobs.py  process.py
src/clockd/services/: detector.py  job_manager.py  metrics.py  pipeline.py  view_transformer.py
src/clockd/services/event_sources/: base.py  manager.py  unifi_protect.py
src/clockd/utils/: log.py  units.py  video.py
tests/: conftest.py  test_api_cameras.py  test_api_jobs.py  test_api_process.py  test_app_lifespan.py  test_calibrate.py  test_config.py  test_config_validation.py  test_detector.py  test_detector_fallback.py  test_event_sources.py  test_job_manager.py  test_log_utils.py  test_metrics.py  test_metrics_prometheus.py  test_middleware.py  test_middleware_unit.py  test_pipeline.py  test_pipeline_integration.py  test_process_flow.py  test_smoothing.py  test_validation_local.py  test_video_utils.py  test_view_transformer.py
