[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clockd"
version = "0.1.0"
description = "Vehicle speed estimation HTTP API from security camera footage"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110,<1",
    "uvicorn[standard]>=0.29,<1",
    "python-multipart>=0.0.9",
    "pydantic>=2.6,<3",
    "pydantic-settings>=2.2,<3",
    "pyyaml>=6.0",
    "aiofiles>=23.0",
    "numpy>=1.26,<3",
    "opencv-python-headless>=4.9,<5",
    "ultralytics>=8.1,<9",
    "supervision>=0.21,<1",
]

[project.optional-dependencies]
prometheus = ["prometheus-client>=0.20"]
influxdb = []  # uses stdlib urllib, no extra deps
metrics = ["clockd[prometheus]"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-m 'not local'"
markers = ["local: Local-only tests requiring model downloads and network access"]

[tool.ruff]
line-length = 100
target-version = "py311"
